--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./css/index.min.css" />
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <header>
+      <div class="container">
+        <form class="search-form" id="search-form">
+          <input
+            class="search__input"
+            type="text"
+            name="searchQuery"
+            autocomplete="off"
+            placeholder="Search images..."
+          />
+          <button class="search__button" type="submit">Search</button>
+        </form>
+      </div>
+    </header>
+
+    <main> 
+      <div class="container">
+        <div class="gallery__images">
+        </div>
+        <button class="btn__load__more hidden" type="button">Load More</button>
+      </div>
+    </main>
+
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
